Add default git credential

--- a/.gitconfig
+++ b/.gitconfig
@@ -26,3 +26,5 @@
 	helper = /mnt/c/Program\\ Files/Git/mingw64/bin/git-credential-manager.exe
 [init]
 	defaultBranch = main
+[credential "https://github.com"]
+	username = dmyoung9
