--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,5 +24,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'jaclu/tmux-menus'
 # set -g @plugin 'erikw/tmux-powerline'
 
+set -ga terminal-overrides ",xterm-256color:Tc"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
