Fix tmux mouse mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,7 @@ set -g @plugin 'jaclu/tmux-menus'
 # set -g @plugin 'erikw/tmux-powerline'
 
 set -ga terminal-overrides ",xterm-256color:Tc"
+set -g mouse on
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
